[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe_checker"
description = "A CLI tool to validate recipes for a SparseZoo stub"
dynamic = ["readme", "version"]
authors = [{ name = "Domenic Barbuzzi", email = "domenic@neuralmagic.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "requests ~= 2.28",
    "rich ~= 13.3",
    "sparseml ~= 1.4",
    "sparsezoo ~= 1.4"
]

[tool.setuptools.dynamic]
readme = { file = "README.md" }
version = { attr = "recipe_checker.__version__" }

[project.optional-dependencies]
dev = [
    "black ~= 23.1.0",
    "flake8 ~= 6.0.0",
    "isort ~= 5.12.0",
    "mypy ~= 1.1.1",
    "types-requests ~= 2.28"
]

[project.scripts]
check-recipe = "recipe_checker.__main__:entrypoint"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
